fix(igx-grid): adjust "Change in Year" width, align badges, #229

--- a/src/app/grid/grid-sample-selection/grid-selection.component.scss
+++ b/src/app/grid/grid-sample-selection/grid-selection.component.scss
@@ -33,3 +33,12 @@
 .grid__wrapper {
     margin: 0 16px;
 }
+
+.currency-badge-container {
+    width: 80px; 
+    float: right;
+}
+
+.badge-left {
+    float: left;
+}
